# HarmonicMapping

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  HarmonicMapping.cpp  main.cpp
src/include/: HarmonicMapping.h
